--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.1'
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
@@ -20,7 +31,6 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+'
     compile 'com.stripe:stripe-android:6.1.2'
 }
